# Peer-AI

./: .eslintrc.json  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: publish.yml
public/: masks.json
public/locales/en/: translation.json
public/locales/vi/: translation.json
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  loading.tsx
src/app/api/chat/: route.ts
src/app/api/models/: route.ts
src/app/api/search/: route.ts
src/app/inference/: page.tsx
src/app/search/: page.tsx
src/components/: AppBar.tsx  ChatBubble.tsx  ChatStart.tsx  ChatToolbar.tsx  ChatUI.tsx  ChatWindow.tsx  EmojiPickerButton.tsx  Inference.tsx  Layout.tsx  Markdown.tsx  Masks.tsx  Providers.tsx  Search.tsx  Settings.tsx  Sidebar.tsx
src/components/Providers/: ConfirmDialogProvider.tsx
src/components/UI/: Button.tsx  Card.tsx  CodeBlock.tsx  ConfirmDialog.tsx  Dialog.tsx  FadeIn.tsx  Input.tsx  Loader.tsx  Popover.tsx  Select.tsx  Slider.tsx  Switch.tsx  Toast.tsx  Tooltip.tsx
src/hooks/: index.ts  useBreakpoint.ts  useChatScrollAnchor.ts  useCopyToClipboard.ts  useEnterSubmit.ts  useToast.ts
src/lib/: env.mjs  fonts.ts  helpers.ts  idb-storage.ts  store-keys.ts
src/stores/: chat.ts  config.ts  mask.ts  prompt.ts
src/styles/: globals.css
src/types/: index.ts
